--- a/index.html
+++ b/index.html
@@ -160,9 +160,11 @@
                 </div>
             </div>
         </section>
+        <div>
+            <h2>Nuestras Redes Sociales</h2>
+        </div>
         <footer id="nuestrasredes">
             <div class="container-fluid-redes">
-                <h2>Nuestras Redes Sociales</h2>
                 <div>
                     <a class="redes" href="https://www.facebook.com/"><img src="" alt=""></a>
                     <a class="redes" href="https://www.instagram.com/sheltergaragecba/"><img src="" alt=""></a>
