--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -110,21 +110,23 @@
                     </fieldset>
                     <button class="enviar button7">Enviar</button>
                     <button class="borrar button8">Borrar</button>
+                    <div><h2>Donde Estamos</h2></div>
                     <fieldset class="dondeestamos">
-                        <h2>Donde Estamos</h2>
                         <p>Nuestro taller esta ubicado en Av. Recta Martinolli 8622, Córdoba Capital <br>
                         +54 351 7736292 <br></p>
                         <iframe class="mapa"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13629.860187305545!2d-64.2827002!3d-31.3461438!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329dcb77a01f95%3A0x4568aaaddfb70286!2sLa%20Mamma%20Restaurante!5e0!3m2!1ses-419!2sar!4v1694133924269!5m2!1ses-419!2sar"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </fieldset>
+                    </fieldset>
                 </form>
             </section>
         </main>
+        <div>
+            <h2>Nuestras Redes Sociales</h2>
+        </div>
         <footer id="nuestrasredes">
             <div class="container">
-                <h2>Nuestras Redes Sociales</h2>
                 <div>
                     <a class="redes" href="https://www.facebook.com/"><img src="" alt=""></a>
                     <a class="redes" href="https://www.instagram.com/sheltergaragecba/"><img src="" alt=""></a>
