--- a/pages/otrosservicios.html
+++ b/pages/otrosservicios.html
@@ -151,16 +151,18 @@
                 </div>
             </section> -->
     </header>
+    <div>
+        <h2>Nuestras Redes Sociales</h2>
+    </div>
     <footer id="nuestrasredes">
-        <div class="container">
-            <h2>Nuestras Redes Sociales</h2>
+        <div class="container-fluid-redes">
             <div>
                 <a class="redes" href="https://www.facebook.com/"><img src="" alt=""></a>
                 <a class="redes" href="https://www.instagram.com/sheltergaragecba/"><img src="" alt=""></a>
                 <a class="redes" href="https://www.tiktok.com/explore"><img src=""></a>
                 <a class="redes" href="https://www.youtube.com/"><img src=""></a>
             </div>
-            <p>&copy;Shlter Garage</p>
+            <p>&copy;Shelter Garage</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
