--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -133,7 +133,7 @@
                     <a class="redes" href="https://www.tiktok.com/explore"><img src=""></a>
                     <a class="redes" href="https://www.youtube.com/"><img src=""></a>
                 </div>
-                <p>&copy;Shlter Garage</p>
+                <p class="copyright">&copy;Shelter Garage</p>
             </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
