--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
                                 <li><a class="dropdown-item" href="./pages/cuidadoexterior.html">Abrillantados</a></li>
                                 <li><a class="dropdown-item" href="./pages/cuidadoexterior.html">Lavados Premium</a></li>
                                 <li><a class="dropdown-item" href="./pages/cuidadoexterior.html">Tratamientos</a></li>
-                                <li><a class="dropdown-item" href="./pages/cuidadoexterior.html">Restauracion de Opticas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -81,6 +80,7 @@
                                 <li><a class="dropdown-item" href="./pages/otrosservicios.html">PPF (Paint Protection Film) </a></li>
                                 <li><a class="dropdown-item" href="./pages/otrosservicios.html">Polarizados</a></li>
                                 <li><a class="dropdown-item" href="./pages/otrosservicios.html">Restauracion de llantas</a></li>
+                                <li><a class="dropdown-item" href="./pages/otrosservicios.html">Restauracion de Opticas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
