--- a/pages/cuidadoexterior.html
+++ b/pages/cuidadoexterior.html
@@ -48,7 +48,6 @@
                                 <li><a class="dropdown-item" href="#">Abrillantados</a></li>
                                 <li><a class="dropdown-item" href="#">Lavados Premium</a></li>
                                 <li><a class="dropdown-item" href="#">Tratamientos</a></li>
-                                <li><a class="dropdown-item" href="#">Restauracion de Opticas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -80,10 +79,10 @@
                                 Otros Servicios
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./otrosservicios.html">PPF (Paint Protection Film)
-                                    </a></li>
+                                <li><a class="dropdown-item" href="./otrosservicios.html">PPF (Paint Protection Film)</a></li>
                                 <li><a class="dropdown-item" href="./otrosservicios.html">Polarizados</a></li>
                                 <li><a class="dropdown-item" href="./otrosservicios.html">Restauracion de llantas</a>
+                                <li><a class="dropdown-item" href="./otrosservicios.html">Restauracion de Opticas</a></li>
                                 </li>
                             </ul>
                         </li>
@@ -96,7 +95,7 @@
         </nav>
         <main>
             <div>
-                <h2>Nuestros Servicios - opcion A</h2>
+                <h2>Nuestros Servicios</h2>
             </div>
             <div class="card mb-3" style="max-width: 1300px;">
                 <div class="row g-0">
@@ -162,44 +161,6 @@
                     </div>
                 </div>
             </div>
-            <div class="card mb-3" style="max-width: 1300px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="../img/opticas.jpg" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">RESTAURACION DE OPTICAS</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <button>Solictar Presupuesto</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <section id="nuestros-servicios-exterior">
-                <div class="container">
-                    <h2>Nuestros Servicios - Opcion B</h2>
-                    <div class="serviciosexterior">
-                        <div class="abrillantados">
-                            <h4>Abrillantados</h4>
-                            <button>Solictar Turno</button>
-                        </div>
-                        <div class="lavados">
-                            <h4>Lavados Premium</h4>
-                            <button>Solictar Turno</button>
-                        </div>
-                        <div class="tratamientos">
-                            <h4>Tratatientos Ceramicos & Acrilicos</h4>
-                            <button>Solictar Turno</button>
-                        </div>
-                        <div class="opticas">
-                            <h4>Restauracion de opticas</h4>
-                            <button>Solictar Turno</button>
-                        </div>
-                    </div>
-                </div>
-            </section>
         </main>
     </header>
     <div>
