--- a/pages/otrosservicios.html
+++ b/pages/otrosservicios.html
@@ -48,7 +48,6 @@
                                 <li><a class="dropdown-item" href="./cuidadoexterior.html">Abrillantados</a></li>
                                 <li><a class="dropdown-item" href="./cuidadoexterior.html">Lavados Premium</a></li>
                                 <li><a class="dropdown-item" href="./cuidadoexterior.html">Tratamientos</a></li>
-                                <li><a class="dropdown-item" href="./cuidadoexterior.html">Restauracion de Opticas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -60,6 +59,7 @@
                                 <li><a class="dropdown-item" href="./cuidadointerior.html">Retapizado de Volantes</a></li>
                                 <li><a class="dropdown-item" href="./cuidadointerior.html">Limpieza y pintura de tapizados</a></li>
                                 <li><a class="dropdown-item" href="./cuidadointerior.html">Detallado de Motor</a></li>
+                                <li><a class="dropdown-item" href="./cuidadoexterior.html">Restauracion de Opticas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -91,65 +91,71 @@
             </div>
         </nav>
         <main>
-            <div class="card mb-3">
-                <img src="../img/ppf2.jpg" class="card-img-top" style="width: 400px;">
-                <img src="../img/ppf2.jpg" class="card-img-top" style="width: 400px;">
-                <img src="../img/ppf2.jpg" class="card-img-top " style="width: 400px;">
-                <div class="card-body">
-                  <h5 class="card-title">PPF PAINT PROTECT FILM</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-              <div class="card mb-3">
-                <img src="../img/ppf2.jpg" class="card-img-top" style="width: 400px;">
-                <img src="../img/ppf2.jpg" class="card-img-top" style="width: 400px;">
-                <img src="../img/ppf2.jpg" class="card-img-top " style="width: 400px;">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-              <div class="card mb-3">
-                <img src="../img/ppf2.jpg" class="card-img-top" style="width: 400px;">
-                <img src="../img/ppf2.jpg" class="card-img-top" style="width: 400px;">
-                <img src="../img/ppf2.jpg" class="card-img-top " style="width: 400px;">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-
-            <!-- <section id="otrosservicios">
-                <div class="container">
-                    <h2>Otros Servicios</h2>
-                    <div class="serviciosvarios">
-                        <div class="ppf">
-                            <h4 class="h4varios">PPF </h4>
-                            <p class="parrafo">Protección Rayos UV a los pasajeros.- <br>Reducción de la Senasación Termíca en el Interior.-
-                            <br>Seguridad, ocultando lo que llevas en el interior.- <br>
-                            </p>
-                            <button>Solictar Turno</button>
-                        </div>
-                        <div class="polarizados">
-                            <h4 class="h4varios">Polarizados</h4>
-                            <p class="parrafo">Protección Rayos UV a los pasajeros.- <br>Reducción de la Senasación Termíca en el Interior.-
-                            <br>Seguridad, ocultando lo que llevas en el interior.- <br>
-                            </p>
-                            <button>Solictar Turno</button>
-                        </div>
-                        <div class="llantas">
-                            <h4 class="h4varios">Restauracion de llantas</h4>
-                            <p class="parrafo">Protección Rayos UV a los pasajeros <br>Reducción de la Senasación Termíca en el Interior
-                            <br>Seguridad, ocultando lo que llevas en el interior <br>
-                            </p>
-                            <button>Solictar Turno</button>
+            <div>
+                <h2>Nuestros Servicios</h2>
+            </div>
+            <div class="card mb-3" style="max-width: 1300px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="../img/ppf2.jpg" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">PPF PAINT PROTECT FILM</h5>
+                            <p class="card-text">Protección Rayos UV a los pasajeros.- <br>Reducción de la Senasación Termíca en el Interior.-
+                                <br>Seguridad, ocultando lo que llevas en el interior.- <br></p>
+                            <button>Solictar Presupuesto</button>
                         </div>
                     </div>
                 </div>
-            </section> -->
+            </div>
+            <div class="card mb-3" style="max-width: 1300px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="../img/polarizado.jpg" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">POLARIZADOS</h5>
+                            <p class="card-text">Protección Rayos UV a los pasajeros.- <br>Reducción de la Senasación Termíca en el Interior.-
+                                <br>Seguridad, ocultando lo que llevas en el interior.- <br></p>
+                            <button>Solictar Presupuesto</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 1300px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="../img/Reparacion-de-llantas.jpg" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">RESTAURACION DE LLANTAS</h5>
+                            <p class="card-text">Protección Rayos UV a los pasajeros <br>Reducción de la Senasación Termíca en el Interior
+                                <br>Seguridad, ocultando lo que llevas en el interior <br></p>
+                            <button>Solictar Presupuesto</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <div class="card mb-3" style="max-width: 1300px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="../img/opticas.jpg" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">RESTAURACION DE OPTICAS</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <button>Solictar Presupuesto</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </header>
     <div>
         <h2>Nuestras Redes Sociales</h2>
