--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -48,7 +48,6 @@
                                 <li><a class="dropdown-item" href="./cuidadoexterior.html">Abrillantados</a></li>
                                 <li><a class="dropdown-item" href="./cuidadoexterior.html">Lavados Premium</a></li>
                                 <li><a class="dropdown-item" href="./cuidadoexterior.html">Tratamientos</a></li>
-                                <li><a class="dropdown-item" href="./cuidadoexterior.html">Restauracion de Opticas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -81,6 +80,7 @@
                                 <li><a class="dropdown-item" href="./otrosservicios.html">PPF (Paint Protection Film) </a></li>
                                 <li><a class="dropdown-item" href="./otrosservicios.html">Polarizados</a></li>
                                 <li><a class="dropdown-item" href="./otrosservicios.html">Restauracion de llantas</a></li>
+                                <li><a class="dropdown-item" href="./otrosservicios.html">Restauracion de Opticas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
